--- a/titan-solr/src/test/resources/log4j.properties
+++ b/titan-solr/src/test/resources/log4j.properties
@@ -1,7 +1,7 @@
 # A1 is set to be a FileAppender.
-#log4j.appender.A1=org.apache.log4j.ConsoleAppender
-log4j.appender.A1=org.apache.log4j.FileAppender
-log4j.appender.A1.File=target/test.log
+log4j.appender.A1=org.apache.log4j.ConsoleAppender
+#log4j.appender.A1=org.apache.log4j.FileAppender
+#log4j.appender.A1.File=target/test.log
 
 # A1 uses PatternLayout.
 log4j.appender.A1.layout=org.apache.log4j.PatternLayout
@@ -13,3 +13,4 @@ log4j.rootLogger=INFO, A1
 log4j.logger.org.apache.cassandra=INFO
 log4j.logger.org.apache.hadoop=INFO
 log4j.logger.org.apache.zookeeper=INFO
+log4j.logger.org.apache.solr=WARN
